# the_inspector

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  package.xml
World/: Wall.world
World/my_Wall/: model.config  simple_Wall.sdf
World/my_Wall/meshes/: simple_box.dae
doc/: Doxyfile
doc/html/: _image_processing_module_8cpp.html  _image_processing_module_8cpp__incl.map  _image_processing_module_8cpp__incl.md5  _image_processing_module_8cpp_source.html  _image_processing_module_8h.html  _image_processing_module_8h__dep__incl.map  _image_processing_module_8h__dep__incl.md5  _image_processing_module_8h__incl.map  _image_processing_module_8h__incl.md5  _image_processing_module_8h_source.html  _path_planning_module_8cpp.html  _path_planning_module_8cpp__incl.map  _path_planning_module_8cpp__incl.md5  _path_planning_module_8cpp_source.html  _path_planning_module_8h.html  _path_planning_module_8h__dep__incl.map  _path_planning_module_8h__dep__incl.md5  _path_planning_module_8h__incl.map  _path_planning_module_8h__incl.md5  _path_planning_module_8h_source.html  _robot_module_8cpp.html  _robot_module_8cpp__incl.map  _robot_module_8cpp__incl.md5  _robot_module_8cpp_source.html  _robot_module_8h.html  _robot_module_8h__dep__incl.map  _robot_module_8h__dep__incl.md5  _robot_module_8h__incl.map  _robot_module_8h__incl.md5  _robot_module_8h_source.html  annotated.html  annotated_dup.js  class_image_processing_module-members.html  class_image_processing_module.html  class_image_processing_module.js  class_path_planning_module-members.html  class_path_planning_module.html  class_path_planning_module.js  class_robot-members.html  class_robot.html  (+22 more)
doc/html/search/: all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  classes_0.js  classes_1.js  files_0.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  functions_8.js  functions_9.js  (+2 more)
doc/latex/: _image_processing_module_8cpp.tex  _image_processing_module_8cpp__incl.md5  _image_processing_module_8h.tex  _image_processing_module_8h__dep__incl.md5  _image_processing_module_8h__incl.md5  _path_planning_module_8cpp.tex  _path_planning_module_8cpp__incl.md5  _path_planning_module_8h.tex  _path_planning_module_8h__dep__incl.md5  _path_planning_module_8h__incl.md5  _robot_module_8cpp.tex  _robot_module_8cpp__incl.md5  _robot_module_8h.tex  _robot_module_8h__dep__incl.md5  _robot_module_8h__incl.md5  annotated.tex  class_image_processing_module.tex  class_path_planning_module.tex  class_robot.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  main_8cpp.tex  main_8cpp__incl.md5  refman.tex
include/: ImageProcessingModule.h  PathPlanningModule.h  RobotModule.h
launch/: the_inspector.launch
results/: cppcheck  cpplint
results/localCoverage/: index-sort-f.html  index-sort-l.html  index.html
src/: ImageProcessingModule.cpp  PathPlanningModule.cpp  RobotModule.cpp  main.cpp
test/: ImageProcessingModuleTest.cpp  PathPlanningModuleTest.cpp  RobotModuleTest.cpp  inspect.launch  main.cpp
(+505 files in other folders)
