<?xml version="1.0"?>
<package format="2">
  <name>the_inspector</name>
  <version>0.0.0</version>
  <description>The the_inspector package</description>

  <maintainer email="htawade@terpmail.umd.edu">Hrishikesh Tawade</maintainer>
  <maintainer email="krawal@terpmail.umd.edu">Kapil Rawal</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>map_server</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>tf</build_depend>
  
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>map_server</build_export_depend>
  <build_export_depend>move_base_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>opencv2</exec_depend>
  <exec_depend>tf</exec_depend>
  
</package>
